# telegram-bot-notes

./: .env.docker  .env.exemple  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  redis_connect_test.py
.github/workflows/: automation.yml  docker-image.yml
bot/config_data/: config.py
bot/db/: requests.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 2024_05_30_2042-6de0da2c697a_init.py
bot/db/models/: __init__.py  models.py
bot/dialogs/: __init__.py  dialog_add_note.py
bot/filters/: filters.py
bot/handlers/: __init__.py  add_note.py  admin_hendlers.py  base_handlers.py  basehandlers.py  note_handlers.py
bot/keyboards/: notes_kb.py  set_menu.py
bot/lexicon/: lexicon_ru.py
bot/states/: __init__.py  states.py
tests/: .env.test  README.md  alembic.ini  conftest.py  mocked_aiogram.py  one.py  test_basic_commands.py
tests/migrations/: env.py
tests/migrations/versions/: 65a262a5c808_init.py
